# HackAI_230344

./: README.md  alert.py  currency.py  database.py  dataset.py  display.py  email.py  email_alert.py  hackaicode.py  main.py  pyproject.toml
daily_price/: 09 Oct - 2023.txt  11 Oct - 2023.txt
micro-agents/: agent_communication.py  booking_protocol.py  main.py  my_first_agents.py
src/: config.py  main.py  main1.py  main2.py
src/agents/currency/: currencyrates.py
src/messages/: config_email.py  email.py  my_email.py  tempCodeRunnerFile.py
src/utilis/: config.py  exchange_rates.csv  userDatabase.py
