[tool.poetry]
name = "hackai"
version = "0.1.0"
description = "a project for giving alerts for currency exchange"
authors = ["Ekansh <ekanshbhushan2k22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
user-agents = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
